@@ -19,9 +19,6 @@ PyFeyn TODO
  * setStrokeStyle(color=None, thickness=None, trans=None, others=None) etc. -
    hide PyX options.
 
- * Add a Gravitino line (a struck-through graviton)? Alternative is just a
-   fermion.
-
  * Improve multi-lines. Should be defined by number of lines and
    max-width/half-width OR number and separation. Arrows shouldn't necessarily
    be duplicated on all lines. Auto-sizing to blobs?  Should definitely crop to
